WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142312
REGRESSION (
r179597
): Can't see power saver banner for plugins
https://bugs.webkit.org/show_bug.cgi?id=142312
Summary
REGRESSION (r179597): Can't see power saver banner for plugins
Dean Jackson
Reported
2015-03-04 15:11:58 PST
REGRESSION (
r179597
): Can't see power saver banner for plugins
Attachments
Patch
(1.67 KB, patch)
2015-03-04 15:15 PST
,
Dean Jackson
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2015-03-04 15:12:59 PST
<
rdar://problem/20040517
>
Dean Jackson
Comment 2
2015-03-04 15:15:00 PST
Created
attachment 247902
[details]
Patch
Brent Fulgham
Comment 3
2015-03-04 15:16:32 PST
Comment on
attachment 247902
[details]
Patch r=me
Dean Jackson
Comment 4
2015-03-04 15:21:49 PST
Committed
r181038
: <
http://trac.webkit.org/changeset/181038
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug