REGRESSION (r179597): Can't see power saver banner for plugins https://bugs.webkit.org/show_bug.cgi?id=142312 <rdar://problem/20040517>

Reviewed by Brent Fulgham.

We were being a bit too restrictive when deciding a child
should not create a renderer. All shadow root children
of the snapshotted plugin need one.

* html/HTMLPlugInImageElement.cpp:
(WebCore::HTMLPlugInImageElement::childShouldCreateRenderer):
Test if we're part of the shadow tree.

Canonical link: https://commits.webkit.org/160341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181038 268f45cc-cd09-0410-ab3c-d52691b4dbfc